Atualização de Swagger
